[package]
name = "bradis-web"
version = "0.1.2"
authors = ["Brad Dunbar <dunbarb2@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
respite = { version = "0.3.9", default-features = false }
tokio = { version = "*", features = ["sync"], default-features = false }
wasm-bindgen = "0.2.84"
bradis = { path = "../bradis", features = [], default-features = false }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-time = "1.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
